--- a/package.json
+++ b/package.json
@@ -10,39 +10,40 @@
   },
   "dependencies": {
     "@huggingface/inference": "^2.8.1",
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.2",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.13",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.454.0",
-    "next": "^14.0.4",
+    "next": "^14.2.24",
     "next-auth": "^4.24.10",
     "node-fetch": "^3.3.2",
     "openai": "^4.68.4",
-    "prisma": "^5.21.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "prisma": "^5.22.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "recharts": "^2.13.3",
     "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "victory": "^37.2.0"
+    "victory": "^37.2.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20.17.6",
-    "@types/react": "^18.3.12",
+    "@types/node": "^20.17.19",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "^13.4.19",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
