--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.30.4",
+    "drizzle-orm": "^0.39.3",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.454.0",
     "next": "^14.2.24",
     "next-auth": "^4.24.10",
     "node-fetch": "^3.3.2",
     "openai": "^4.85.2",
+    "pg": "^8.13.3",
     "prisma": "^5.22.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^6.28.0",
     "recharts": "^2.13.3",
     "shadcn-ui": "^0.2.3",
