--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "flask-login>=0.6.3",
+    "oauthlib>=3.2.2",
     "openai>=1.63.2",
 ]
